# miri

./: .gitignore  Cargo.toml  build.rs
doc/: genmc.md
genmc-sys/: Cargo.toml  build.rs
genmc-sys/cpp/include/: MiriInterface.hpp
genmc-sys/cpp/src/MiriInterface/: EventHandling.cpp  MixedSize.cpp  Mutex.cpp  Setup.cpp
genmc-sys/src/: lib.rs
miri-script/src/: commands.rs  main.rs
src/: diagnostics.rs  eval.rs  lib.rs  machine.rs
src/alloc_addresses/: mod.rs
src/concurrency/: concurrency_handler.rs  data_race.rs  init_once.rs  mod.rs  sync.rs  thread.rs  weak_memory.rs
src/concurrency/genmc/: config.rs  cxx_interface.rs  dummy.rs  global_allocations.rs  helper.rs  intercept.rs  mapping.rs  mod.rs  run.rs  scheduling.rs  thread_info_manager.rs  warnings.rs
src/genmc/: config.rs  cxx_extra.rs  dummy.rs  helper.rs  mapping.rs  mod.rs  thread_info_manager.rs
src/intrinsics/: atomic.rs  mod.rs
src/shims/: foreign_items.rs
src/shims/unix/: foreign_items.rs  thread.rs
src/shims/unix/linux_like/: sync.rs
src/shims/unix/macos/: sync.rs
src/shims/windows/: sync.rs
tests/: ui.rs
tests/fail-dep/genmc/simple/: 2w2w_acq_rel.rs  2w2w_acq_rel.stderr  2w2w_relaxed.rs  2w2w_relaxed.stderr
tests/fail-dep/genmc/weak_memory/: weak_uninit.rs  weak_uninit.stderr
tests/genmc/_disabled/: mutex_poison.rs
tests/pass/: atomic_simple.rs  simple.rs
tests/pass-dep/genmc/: 2W2W_v0.rs  2W2W_v1.rs  2w2w_2sc_scf.rs  README.md
tests/pass/genmc/: atomic_simple.rs  relaxed_2w2w.rs  thread_simple.rs
tests/utils-dep/: genmc.rs  miri_extern.rs  mod.rs
(+112 files in other folders)
