[package]
name = "genmc-sys"
version = "0.11.0" # NOTE: should match the GenMC version
edition = "2024"

[dependencies]
cxx = { version = "1.0.143", features = ["c++20"] }

[build-dependencies]
cxx-build = { version = "1.0.143", features = ["parallel"] }
num_cpus = "1.16.0"
walkdir = { version = "2.5.0" }
